--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
