--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@cloudflare/sandbox": "^0.6.6",
     "@prisma/client": "^6.2.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "bcryptjs": "^2.4.3",
