--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # Database
 DATABASE_URL="postgresql://user:password@localhost:5432/acf?schema=public"
 
+# Cloudflare Worker API Secret (for authenticating requests to sandbox worker)
+WORKER_API_SECRET="your_secret_key_here"
+
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
