--- a/sandbox/.dev.vars.example
+++ b/sandbox/.dev.vars.example
@@ -1,3 +1,6 @@
 # Google Gemini API Key
 # Get your API key from: https://aistudio.google.com/app/apikey
 GOOGLE_GENERATIVE_AI_API_KEY=your_api_key_here
+
+# Worker API Secret (shared with main application for authentication)
+WORKER_API_SECRET=your_secret_key_here
