Feat: Add Agent Loop

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Database
 DATABASE_URL="postgresql://user:password@localhost:5432/acf?schema=public"
 
-# Cloudflare Worker API Secret (for authenticating requests to sandbox worker)
+# Cloudflare Worker
+WORKER_URL="https://unsloppify.app"
 WORKER_API_SECRET="your_secret_key_here"
 
 NEXTAUTH_SECRET=""
